--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         
         .dark-theme {
             background-color: #333333;
-            color: #ffffff;
+            color: #1989ca;
         }
     </style>
 </head>
